# Decodeon

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
src/decodeon/: main.py
src/decodeon/agents/: __init__.py  csv_agent.py  python_agent.py  router_agent.py
src/decodeon/core/: __init__.py  config.py  utils.py
src/decodeon/models/: __init__.py  models.py
src/decodeon/types/: __init__.py  types.py
src/decodeon/types/enums/: __init__.py  common_enum.py  models_enum.py  session_state_enum.py
src/decodeon/ui/: app.py
src/decodeon/ui/components/: __init__.py  chat.py  file_upload.py  page_config.py  query_input.py
