[project]
name = "decodeon"
version = "0.1.0"
description = "Decodeon is a lightweight, LangChain-powered code interpreter designed to run and reason over code with intelligent agents."
authors = [{ name = "rahuljsaliaan", email = "rahuljsaliaan@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13 <3.14"
dependencies = [
    "langchain (>=0.3.24,<0.4.0)",
    "langsmith (>=0.3.33,<0.4.0)",
    "langchain-community (>=0.3.22,<0.4.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "langchain-openai (>=0.3.14,<0.4.0)",
    "langchainhub (>=0.1.21,<0.2.0)",
    "langchain-experimental (>=0.3.4,<0.4.0)",
    "qrcode (>=8.1,<9.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "streamlit (>=1.44.1,<2.0.0)",
]

[tool.poetry]
packages = [{ include = "decodeon", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
